--- a/CadastroAluno.html
+++ b/CadastroAluno.html
@@ -1,3 +1,4 @@
 i.	RA: <2220109210>
 ii.	Nome do Aluno: <Gustavo Rodrigues Gular>
-iii.	Data de Nascimento: <30/08/1995>
+iii.	Email: <eduardo.gular54@uni9.edu.br>
+iv.	Data de Nascimento: <30/08/1995>
